frontend/test/should_pass/redirect_005.grg
rule r {
	-e:Edge-> y:Node;
	
	modify {
		y !-e-> y;
	}
}

