frontend/test/should_fail/basic_009.grg
rule r {
  -e:Edge->;
  negative {
    -e:Edge->;
  }
  modify {
  }
}
